# platformer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  simple level sample.txt
.github/workflows/: cmake.yml
include/platformer/: graphics.h  platformer.h  point.h
src/: graphics.cpp  point.cpp
test/: CMakeLists.txt  point_test.cpp
